2004-12-29  Milan Zamazal  <pdm@zamazal.org>

	* files.el (hack-local-variables): If no PREFIX, set it to "^".
	Redundant variable PREFIXLEN removed.

2004-12-28  Matt Hodges  <MPHodges@member.fsf.org>

	* eshell/em-hist.el (eshell-previous-matching-input):
	Start the deletion from the end of the output.

2004-12-29  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* term/mac-win.el: Require x-dnd.
	(mac-drag-n-drop): Sync with W32 version.  Use x-dnd.el
	functions.

2004-12-29  David Kastrup  <dak@gnu.org>

	* international/mule.el (decode-coding-inserted-region): Don't
	barf if `buffer-undo-list' is already set to `t'.

2004-12-29  Jay Belanger  <belanger@truman.edu>

	* calc/calc-prog.el (calc-user-define-formula): Put default values
	for function names in prompts.
	(calc-user-define-permanent, calc-user-define-composition)
	(calc-user-define-formula): Remove the need for "calcFunc-" in the
	default input for algebraic functions.

2004-12-29  Thien-Thi Nguyen  <ttn@gnu.org>

	* vc-rcs.el (vc-rcs-annotate-command):
	Fix omission bug: Call `vc-setup-buffer'.

2004-12-29  Kenichi Handa  <handa@m17n.org>

	* international/mule.el (recode-region): New function.

2004-12-28  Richard M. Stallman  <rms@gnu.org>

	* simple.el (undo-extra-outer-limit): New variable.
	(undo-outer-limit-truncate): Test and set it.

	* emacs-lisp/lisp.el (mark-sexp, mark-defun): New arg ALLOW-EXTEND
	enables the feature to extend the existing region.

	* simple.el (mark-word): New arg ALLOW-EXTEND
	enables the feature to extend the existing region.

	* textmodes/paragraphs.el (mark-paragraph): New arg ALLOW-EXTEND
	enables the feature to extend the existing region.

	* startup.el (site-run-file): Don't allow setting it with Custom.

	* simple.el (buffer-disable-undo): Fix previous change.

2004-12-27  Masatake YAMATO  <jet@gyve.org>

	* hexl.el (hexlify-buffer): Remove fontification here.
	Use font lock mechanism instead.
	(hexl-font-lock-keywords): New font lock kewords.