@@ -1,3 +1,8 @@
+2004-12-29  Sanghyuk Suh  <han9kin@mac.com>
+
+	* term/mac-win.el (mac-drag-n-drop): Handle drag-n-drop events
+	that include line numbers.
+
 2004-12-29  Milan Zamazal  <pdm@zamazal.org>
 
 	* files.el (hack-local-variables): If no PREFIX, set it to "^".
